--- a/UI/main.ui
+++ b/UI/main.ui
@@ -2526,7 +2526,7 @@ font: 18pt &quot;Segoe UI&quot; bold;</string>
                               <rect>
                                <x>0</x>
                                <y>0</y>
-                               <width>353</width>
+                               <width>218</width>
                                <height>218</height>
                               </rect>
                              </property>
@@ -3683,7 +3683,7 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0.511364, x2:1, y2:0.523,
                  </font>
                 </property>
                 <property name="text">
-                 <string>Group Number</string>
+                 <string>Group 1</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
@@ -3737,7 +3737,6 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0.511364, x2:1, y2:0.523,
  </widget>
  <resources>
   <include location="resources.qrc"/>
-  <include location="../../../PycharmProjects/Salvation/resources.qrc"/>
  </resources>
  <connections/>
 </ui>
