--- a/UI/main.ui
+++ b/UI/main.ui
@@ -539,8 +539,23 @@ Button */
 	background-color: rgb(35, 40, 49);
 	border: 2px solid rgb(43, 50, 61);
 }
-
-</string>
+QMenu {
+	background-color: rgb(33, 37, 43); 
+	font: 8pt &quot;Segoe UI&quot;; 
+color: rgb(189, 147, 249);	
+}
+QMenu::item:selected {
+	color: rgb(255, 255, 255);
+	background-color: rgb(254, 120, 198); 
+	border-style: solid;
+ 	border-radius: 4px;
+}
+QMenu::item {
+	color: rgb(254, 120, 198);
+	background-color: rgb(40, 44, 52);
+	border-style: solid;
+	border-radius: 4px;
+}</string>
    </property>
    <widget class="QFrame" name="bgApp">
     <property name="geometry">
