--- a/UI/main.ui
+++ b/UI/main.ui
@@ -1964,7 +1964,7 @@ font: 18pt &quot;Segoe UI&quot; bold;</string>
                         <x>0</x>
                         <y>0</y>
                         <width>361</width>
-                        <height>222</height>
+                        <height>218</height>
                        </rect>
                       </property>
                       <property name="styleSheet">
@@ -2031,7 +2031,7 @@ font: 18pt &quot;Segoe UI&quot; bold;</string>
                         <x>0</x>
                         <y>0</y>
                         <width>361</width>
-                        <height>222</height>
+                        <height>218</height>
                        </rect>
                       </property>
                       <property name="styleSheet">
@@ -2541,8 +2541,8 @@ font: 18pt &quot;Segoe UI&quot; bold;</string>
                               <rect>
                                <x>0</x>
                                <y>0</y>
-                               <width>222</width>
-                               <height>222</height>
+                               <width>218</width>
+                               <height>218</height>
                               </rect>
                              </property>
                              <property name="styleSheet">
@@ -3392,7 +3392,7 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0.511364, x2:1, y2:0.523,
                      <property name="geometry">
                       <rect>
                        <x>0</x>
-                       <y>40</y>
+                       <y>30</y>
                        <width>131</width>
                        <height>31</height>
                       </rect>
@@ -3614,6 +3614,31 @@ font: 18pt &quot;Segoe UI&quot; bold;</string>
                      <property name="icon">
                       <iconset resource="resources.qrc">
                        <normaloff>:/icons/images/icons/cil-arrow-circle-left.png</normaloff>:/icons/images/icons/cil-arrow-circle-left.png</iconset>
+                     </property>
+                    </widget>
+                    <widget class="QLabel" name="currentDirectory">
+                     <property name="geometry">
+                      <rect>
+                       <x>0</x>
+                       <y>70</y>
+                       <width>951</width>
+                       <height>21</height>
+                      </rect>
+                     </property>
+                     <property name="styleSheet">
+                      <string notr="true">color: rgb(113, 126, 149);</string>
+                     </property>
+                     <property name="frameShape">
+                      <enum>QFrame::StyledPanel</enum>
+                     </property>
+                     <property name="lineWidth">
+                      <number>1</number>
+                     </property>
+                     <property name="text">
+                      <string/>
+                     </property>
+                     <property name="alignment">
+                      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
                      </property>
                     </widget>
                    </widget>
