--- a/UI/confirmDelete.ui
+++ b/UI/confirmDelete.ui
@@ -35,12 +35,7 @@
     </font>
    </property>
    <property name="styleSheet">
-    <string notr="true">/* /////////////////////////////////////////////////////////////////////////////////////////////////
-
-SET APP STYLESHEET - FULL STYLES HERE
-DARK THEME - DRACULA COLOR BASED
-
-///////////////////////////////////////////////////////////////////////////////////////////////// */
+    <string notr="true">/* Halloween Stylesheet */
 
 QWidget{
 	color: rgb(221, 221, 221);
@@ -57,7 +52,7 @@ QToolTip {
 	background-position: left center;
     background-repeat: no-repeat;
 	border: none;
-	border-left: 2px solid rgb(255, 121, 198);
+	border-left: 2px solid rgb(255, 166, 121);
 	text-align: left;
 	padding-left: 8px;
 	margin: 0px;
@@ -71,6 +66,19 @@ Bg App */
 }
 
 /* /////////////////////////////////////////////////////////////////////////////////////////////////
+Left Menu */
+#leftMenuBg {	
+	background-color: rgb(33, 37, 43);
+}
+#topLogo {
+	background-color: rgb(33, 37, 43);
+	background-image: url(:/images/images/images/RSA30x30.png);
+	background-position: center;
+	background-repeat: no-repeat;
+}
+#titleLeftApp { font: 63 12pt &quot;Segoe UI Semibold&quot;; }
+#titleLeftDescription { font: 8pt &quot;Segoe UI&quot;; color: rgb(249, 203, 147); }
+
 /* MENUS */
 #topMenu .QPushButton {	
 	background-position: left center;
@@ -85,7 +93,7 @@ Bg App */
 	background-color: rgb(40, 44, 52);
 }
 #topMenu .QPushButton:pressed {	
-	background-color: rgb(189, 147, 249);
+	background-color: rgb(249, 203, 147);
 	color: rgb(255, 255, 255);
 }
 #bottomMenu .QPushButton {	
@@ -101,7 +109,7 @@ Bg App */
 	background-color: rgb(40, 44, 52);
 }
 #bottomMenu .QPushButton:pressed {	
-	background-color: rgb(189, 147, 249);
+	background-color: rgb(249, 203, 147);
 	color: rgb(255, 255, 255);
 }
 #leftMenuFrame{
@@ -123,7 +131,7 @@ Bg App */
 	background-color: rgb(40, 44, 52);
 }
 #toggleButton:pressed {
-	background-color: rgb(189, 147, 249);
+	background-color: rgb(249, 203, 147);
 }
 
 /* Title Menu */
@@ -131,6 +139,14 @@ Bg App */
 
 
 /* /////////////////////////////////////////////////////////////////////////////////////////////////
+Extra Tab */
+#extraLeftBox {	
+	background-color: rgb(44, 49, 58);
+}
+#extraTopBg {
+	background-color: rgb(249, 203, 147);
+}
+
 /* Icon */
 #extraIcon {
 	background-position: center;
@@ -143,8 +159,8 @@ Bg App */
 
 /* Btn Close */
 #extraCloseColumnBtn { background-color: rgba(255, 255, 255, 0); border: none;  border-radius: 5px; }
-#extraCloseColumnBtn:hover { background-color: rgb(196, 161, 249); border-style: solid; border-radius: 4px; }
-#extraCloseColumnBtn:pressed { background-color: rgb(180, 141, 238); border-style: solid; border-radius: 4px; }
+#extraCloseColumnBtn:hover { background-color: rgb(249, 217, 161); border-style: solid; border-radius: 4px; }
+#extraCloseColumnBtn:pressed { background-color: rgb(238, 183, 141); border-style: solid; border-radius: 4px; }
 
 /* Extra Content */
 #extraContent{
@@ -165,7 +181,7 @@ background-position: left center;
 	background-color: rgb(40, 44, 52);
 }
 #extraTopMenu .QPushButton:pressed {	
-	background-color: rgb(189, 147, 249);
+	background-color: rgb(249, 203, 147);
 	color: rgb(255, 255, 255);
 }
 
@@ -185,7 +201,7 @@ Content App */
 
 /* Theme Settings */
 #extraRightBox { background-color: rgb(44, 49, 58); }
-#themeSettingsTopDetail { background-color: rgb(189, 147, 249); }
+#themeSettingsTopDetail { background-color: rgb(249, 203, 147); }
 
 /* Bottom Bar */
 #bottomBar { background-color: rgb(44, 49, 58); }
@@ -206,7 +222,7 @@ Content App */
 	background-color: rgb(40, 44, 52);
 }
 #contentSettings .QPushButton:pressed {	
-	background-color: rgb(189, 147, 249);
+	background-color: rgb(249, 203, 147);
 	color: rgb(255, 255, 255);
 }
 
@@ -226,7 +242,7 @@ QTableWidget::item{
 	gridline-color: rgb(44, 49, 60);
 }
 QTableWidget::item:selected{
-	background-color: rgb(189, 147, 249);
+	background-color: rgb(249, 203, 147);
 }
 QHeaderView::section{
 	background-color: rgb(33, 37, 43);
@@ -260,7 +276,7 @@ QLineEdit {
 	border: 2px solid rgb(33, 37, 43);
 	padding-left: 10px;
 	selection-color: rgb(255, 255, 255);
-	selection-background-color: rgb(255, 121, 198);
+	selection-background-color: rgb(255, 166, 121);
 }
 QLineEdit:hover {
 	border: 2px solid rgb(64, 71, 88);
@@ -276,7 +292,7 @@ QPlainTextEdit {
 	border-radius: 5px;
 	padding: 10px;
 	selection-color: rgb(255, 255, 255);
-	selection-background-color: rgb(255, 121, 198);
+	selection-background-color: rgb(255, 166, 121);
 }
 QPlainTextEdit  QScrollBar:vertical {
     width: 8px;
@@ -301,9 +317,9 @@ QScrollBar:horizontal {
 	border-radius: 0px;
 }
 QScrollBar::handle:horizontal {
-    background: rgb(189, 147, 249);
+    background: rgb(249, 203, 147);
     min-width: 25px;
-	border-radius: 4px
+	border-radius: 4px;
 }
 QScrollBar::add-line:horizontal {
     border: none;
@@ -339,9 +355,9 @@ QScrollBar::add-page:horizontal, QScrollBar::sub-page:horizontal
 	border-radius: 0px;
  }
  QScrollBar::handle:vertical {	
-	background: rgb(189, 147, 249);
+	background: rgb(249, 203, 147);
     min-height: 25px;
-	border-radius: 4px
+	border-radius: 4px;
  }
  QScrollBar::add-line:vertical {
      border: none;
@@ -427,10 +443,10 @@ QComboBox::drop-down {
 	border-bottom-right-radius: 3px;	
 	background-image: url(:/icons/images/icons/cil-arrow-bottom.png);
 	background-position: center;
-	background-repeat: no-reperat;
+	background-repeat: no-repeat;
  }
 QComboBox QAbstractItemView {
-	color: rgb(255, 121, 198);	
+	color: rgb(255, 166, 121);
 	background-color: rgb(33, 37, 43);
 	padding: 10px;
 	selection-background-color: rgb(39, 44, 54);
@@ -448,7 +464,7 @@ QSlider::groove:horizontal:hover {
 	background-color: rgb(55, 62, 76);
 }
 QSlider::handle:horizontal {
-    background-color: rgb(189, 147, 249);
+    background-color: rgb(249, 203, 147);
     border: none;
     height: 10px;
     width: 10px;
@@ -456,10 +472,10 @@ QSlider::handle:horizontal {
 	border-radius: 5px;
 }
 QSlider::handle:horizontal:hover {
-    background-color: rgb(195, 155, 255);
+    background-color: rgb(255, 212, 155);
 }
 QSlider::handle:horizontal:pressed {
-    background-color: rgb(255, 121, 198);
+    background-color: rgb(255, 166, 121);
 }
 
 QSlider::groove:vertical {
@@ -472,7 +488,7 @@ QSlider::groove:vertical:hover {
 	background-color: rgb(55, 62, 76);
 }
 QSlider::handle:vertical {
-    background-color: rgb(189, 147, 249);
+    background-color: rgb(249, 203, 147);
 	border: none;
     height: 10px;
     width: 10px;
@@ -480,26 +496,25 @@ QSlider::handle:vertical {
 	border-radius: 5px;
 }
 QSlider::handle:vertical:hover {
-    background-color: rgb(195, 155, 255);
+    background-color: rgb(255, 212, 155);
 }
 QSlider::handle:vertical:pressed {
-    background-color: rgb(255, 121, 198);
+    background-color: rgb(255, 166, 121);
 }
 
 /* /////////////////////////////////////////////////////////////////////////////////////////////////
 CommandLinkButton */
 QCommandLinkButton {	
-	color: rgb(255, 121, 198);
+	color: rgb(255, 166, 121);
 	border-radius: 5px;
 	padding: 5px;
-	color: rgb(255, 170, 255);
 }
 QCommandLinkButton:hover {	
 	color: rgb(255, 170, 255);
 	background-color: rgb(44, 49, 60);
 }
 QCommandLinkButton:pressed {	
-	color: rgb(189, 147, 249);
+	color: rgb(249, 203, 147);
 	background-color: rgb(52, 58, 71);
 }
 
@@ -518,6 +533,8 @@ Button */
 	background-color: rgb(35, 40, 49);
 	border: 2px solid rgb(43, 50, 61);
 }
+
+
 
 </string>
    </property>
@@ -1030,7 +1047,7 @@ background-repeat: no-repeat;</string>
                         </rect>
                        </property>
                        <property name="styleSheet">
-                        <string notr="true">font: 14pt &quot;Segoe UI&quot;; color: rgb(189, 147, 249); </string>
+                        <string notr="true">font: 14pt &quot;Segoe UI&quot;; color: rgb(255, 166, 121);</string>
                        </property>
                        <property name="lineWidth">
                         <number>1</number>
