--- a/UI/resources.qrc
+++ b/UI/resources.qrc
@@ -1,5 +1,10 @@
 <RCC>
   <qresource prefix="images">
+    <file>../images/images/boo.png</file>
+    <file>../images/images/bats.png</file>
+    <file>../images/images/happyhalloween.png</file>
+    <file>../images/images/pumpkin.png</file>
+    <file>../images/images/witch.png</file>
     <file>../images/images/RSA30x30.png</file>
     <file>../images/images/RSA.png</file>
   </qresource>
